--- a/01-Login/index.html
+++ b/01-Login/index.html
@@ -22,8 +22,8 @@
     <script type="text/javascript" src="auth0-variables.js"></script>
     <script type="text/javascript" src="node_modules/angular/angular.js"></script>
     <script type="text/javascript" src="node_modules/@uirouter/angularjs/release/angular-ui-router.js"></script>
-    <script type="text/javascript" src="node_modules/auth0-js/build/auth0.js"></script>
-    <script type="text/javascript" src="node_modules/angular-auth0/dist/angular-auth0.js"></script>
+    <script type="text/javascript" src="https://cdn.auth0.com/js/lock/11.6.1/lock.min.js"></script>
+    <script type="text/javascript" src="node_modules/angular-lock/dist/angular-lock.min.js"></script>
     <script type="text/javascript" src="app/app.js"></script>
     <script type="text/javascript" src="app/app.run.js"></script>
     <script type="text/javascript" src="app/navbar/navbar.directive.js"></script>
